--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <p>Feel free to explore and learn more about our celestial neighbor!</p>
           <p>to the moon page. Here you will find information about the moon's phases, its surface, and its significance in various cultures.</p>
         <p>Feel free to explore and learn more about our celestial neighbor!</p>
+          <p>to the moon page. Here you will find information about the moon's phases, its surface, and its significance in various cultures.</p>
+        <p>Feel free to explore and learn more about our celestial neighbor!</p>
+          <p>to the moon page. Here you will find information about the moon's phases, its surface, and its significance in various cultures.</p>
+        <p>Feel free to explore and learn more about our celestial neighbor!</p>
     </section>
     <footer>
         <p>© 2023 Moon Enthusiasts</p>
